src/test/deca/context/invalid/test_error_1.3.deca
// Description:
//    Soulève l'erreur (1.3)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Identifier 'B' non déclaré (règle 1.3)
//
// Historique:
//      cree le 06/01/2022


class A extends B {
}


